# drawing-with-code

./: .editorconfig  .gitignore  LICENSE  README.md  default.nix  drawing-with-code.cabal  generate.hs  view.sh
app/: ChessBoard.hs  MandelPuker.hs  MandelbrotSet.hs  ModifiedXorDevShader.hs  Puker.hs  XorDevShader179Chars.hs  XorDevShader195Chars.hs
src/DrawingWithCode/: Animation.hs  ArgsParse.hs  FrameState.hs  Math.hs  Ranges.hs  Render.hs  Vec.hs
src/DrawingWithCode/Animations/: ChessBoard.hs  MandelPuker.hs  MandelbrotSet.hs  Puker.hs  XorDevShader.hs
